# BANK-Cards-Fraud

./: README.md  pyproject.toml
model/fraud_model/data/: .part-00000-a6197a2a-6f89-445e-88bd-a12a6e43d1d7-c000.snappy.parquet.crc  part-00000-a6197a2a-6f89-445e-88bd-a12a6e43d1d7-c000.snappy.parquet
model/fraud_model/metadata/: .part-00000.crc  part-00000
model/fraud_model/treesMetadata/: .part-00000-2b17d4e7-6451-4618-a3d5-103c01848638-c000.snappy.parquet.crc  part-00000-2b17d4e7-6451-4618-a3d5-103c01848638-c000.snappy.parquet
py/: Dashboard.py  app.py  data_loader.py  data_preparation.py  data_visualizer.py  fraud_data_engineer.py  fraud_model.py  main.py
