[tool.poetry]
name = "onlinefraud"
version = "0.1.0"
description = ""
authors = ["adrianinfantes <infantesromeroadrian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
pandas = "^2.1.4"
numpy = "^1.26.3"
matplotlip = "^0.2"
seaborn = "^0.13.1"
mlflow = "^2.9.2"
scikit-learn = "^1.3.2"
nltk = "^3.8.1"
jupyter = "^1.0.0"
jupyterlab = "^4.0.10"
dash = "^2.14.2"
dash-core-components = "^2.0.0"
dash-html-components = "^2.0.0"
plotly = "^5.18.0"
imblearn = "^0.0"
pyspark = "^3.5.0"
streamlit = "^1.29.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
